--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .main-content {
   margin-top: 40px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 400px;
+  grid-template-rows: 1fr 50px;
 }
