--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -4,6 +4,8 @@
   align-items: center;
   background-color: rgb(193, 210, 228);
   padding: 10px;
+  grid-column: 2/end;
+  grid-row: 1/end;
 }
 
 .filter__form {
@@ -39,9 +41,21 @@
   background-color: yellow;
   font-weight: bold;
   transition: all 0.2s linear;
+  margin-bottom: 10px;
 }
 
-.filter__button-submit:hover {
+.filter__button-reset {
+  padding: 5px 3px;
+  border: none;
+  border-radius: 5px;
+  background-color: aquamarine;
+  font-weight: bold;
+  transition: all 0.2s linear;
+
+}
+
+.filter__button-submit:hover,
+.filter__button-reset:hover {
   transform: scale(1.02);
   box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.2);
 }
