--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -8,15 +8,16 @@
   grid-row: 1/end;
 }
 
-.filter__form {
+.filter__fieldset {
   display: flex;
   flex-direction: column;
+  border: none;
 }
 
 .filter__title {
   font-size: 16px;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-right: 15px;
 }
 
 .filter__wrapper-input-text {
@@ -58,4 +59,12 @@
 .filter__button-reset:hover {
   transform: scale(1.02);
   box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.2);
+}
+
+.filter__wrapper-switch {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
 }
