--- a/src/components/Table/TableRow/TableRow.css
+++ b/src/components/Table/TableRow/TableRow.css
@@ -1,3 +1,7 @@
 .table__tr:nth-child(2n) {
   background-color: rgb(220, 220, 220);
 }
+
+.table__tr:nth-child(2n+1) {
+  background-color: rgb(243, 243, 243);
+}
